[gd_scene load_steps=11 format=3 uid="uid://cakiswpgqnnyf"]

[ext_resource type="Script" uid="uid://8j8j6j0j5ak5" path="res://scenes/levels/end_game/end_game.gd" id="1_gpa52"]
[ext_resource type="PackedScene" uid="uid://cdjftn4b2mqbp" path="res://scenes/objects/interrogation_table/interrogation_table.tscn" id="2_j3euf"]
[ext_resource type="PackedScene" uid="uid://dukpkgl3k7t4s" path="res://scenes/objects/toys/rubber_duck.tscn" id="3_32tff"]
[ext_resource type="PackedScene" uid="uid://d3k3vrx3x10k3" path="res://scenes/objects/toys/mooing_cow.tscn" id="4_yx6rv"]
[ext_resource type="PackedScene" uid="uid://cu8q81rh0xmot" path="res://scenes/objects/toys/kazoo.tscn" id="5_7ntnr"]
[ext_resource type="PackedScene" uid="uid://brm67naqlyh56" path="res://scenes/objects/toys/toy_rattle.tscn" id="6_qmayd"]
[ext_resource type="PackedScene" uid="uid://b28tv5rnfncm1" path="res://scenes/objects/overhead_light/overhead_light.tscn" id="7_ectne"]
[ext_resource type="PackedScene" uid="uid://bhc2iutvt1kg3" path="res://scenes/objects/computer_screen/computer_screen.tscn" id="8_wm2y6"]
[ext_resource type="PackedScene" uid="uid://dstu4u4xea1r8" path="res://scenes/entities/baby/baby.tscn" id="9_jmvp1"]
[ext_resource type="FontFile" uid="uid://b265opj1lmq2m" path="res://resources/Funnel_Sans/static/FunnelSans-Bold.ttf" id="10_gpa52"]

[node name="EndGame" type="Node3D"]
script = ExtResource("1_gpa52")

[node name="InterrogationTable" parent="." instance=ExtResource("2_j3euf")]
unique_name_in_owner = true
toys_array = Array[PackedScene]([ExtResource("3_32tff"), ExtResource("4_yx6rv"), ExtResource("5_7ntnr"), ExtResource("6_qmayd")])

[node name="PressToContinueLabel" parent="InterrogationTable/SpeechBubble" index="3"]
text = "Press a/x to continue..."

[node name="OverheadLight" parent="." instance=ExtResource("7_ectne")]
unique_name_in_owner = true
transform = Transform3D(0.999264, 0.0107134, -0.0368437, -0.0205064, 0.960704, -0.276816, 0.0324303, 0.277367, 0.960216, -0.0207067, 1.0398, 0.0758374)

[node name="ComputerScreen" parent="." instance=ExtResource("8_wm2y6")]
unique_name_in_owner = true
transform = Transform3D(0.875363, 0, 0.483466, 0, 1, 0, -0.483466, 0, 0.875363, -0.485855, 0.329269, -0.244517)

[node name="MouthSprite3D" parent="ComputerScreen" index="4"]
frame_progress = 0.191518

[node name="Baby" parent="." instance=ExtResource("9_jmvp1")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.566528, 0.0628099, -0.731166)
visible = false

[node name="Mouth" parent="Baby/HeadMesh" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0467941, 0.0555415)

[node name="SpeechBubble" parent="Baby" index="2"]
speaker_name = "Mr. Big"
billboard = true

[node name="SpeakerLabel" parent="Baby/SpeechBubble" index="1"]
text = "Mr. Big"

[node name="PressToContinueLabel" parent="Baby/SpeechBubble" index="3"]
text = "Press a/x to continue..."

[node name="Credits" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.395758, -0.445179, -1.48417)
text = "Good Pop, Bad Pop

A game by Henry Chao.

For the 4th Godot XR Game Jam.

Thank you for playing my game. I hope it brought you at least one smile while playing. Have a good day!"
font = ExtResource("10_gpa52")
font_size = 24
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2
width = 300.0

[editable path="InterrogationTable"]
[editable path="InterrogationTable/SpeechBubble"]
[editable path="InterrogationTable/SpeechBubble/curved_box"]
[editable path="ComputerScreen"]
[editable path="ComputerScreen/computer_monitor"]
[editable path="ComputerScreen/SpeechBubble"]
[editable path="ComputerScreen/SpeechBubble/curved_box"]
[editable path="Baby"]
[editable path="Baby/SpeechBubble"]
[editable path="Baby/SpeechBubble/curved_box"]
